update hyprland binds

--- a/.config/hypr/bind.conf
+++ b/.config/hypr/bind.conf
@@ -15,7 +15,6 @@ bind = $mainMod, C, exec, code
 bind = $mainMod, O, exec, obs
 bind = $mainMod, L, exec, swaylock
 bind = $mainMod, S, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod SHIFT, R, exec, /home/sam/.config/hypr/scripts/reload.sh # reload hyprland 
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -25,6 +24,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 # bindr = $mainMod, Super_L, exec, ~/.config/rofi/launchers/type-2/launcher.sh  # launch the app list in rofi with super key only
 bind = $mainMod, SPACE, exec, ~/.config/rofi/launchers/launcher.sh
 bind = $mainMod, X, exec, ~/.config/rofi/powermenu/type-2/powermenu.sh
+# bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, R, exec, ~/.config/rofi/run/run.sh
 bind = $mainMod, Z, exec, ~/.config/rofi/filebrowser/filebrowser.sh
 bind = $mainMod, V, exec, ~/.config/rofi/clipboard/clipboard.sh
